Products/RhaptosContent/skins/rhaptos_content/stylesheets/plone/metacontent.css
/* ... */
#cnx_order_link{
  display: block;
  float: right;                 
  border: 1px solid #8cacbb;
  text-decoration: none;
  padding: .5em .7em .6em 30px; 
  background: url(shopping-cart.png) no-repeat .7em .4em;
  margin: 1.5em 0 0 2em;
}

#cnx_course #cnx_order_link{
  margin: 0 0 1em 2em;
}

#cnx_course #cnx_authorship{
  clear: right;
}

#cnx_book_icon{
  float: left;
  margin: 0 .75em .3em 0;
}

/* ========== module header ========== */

#cnx_module_header{
  margin-bottom: 2em;
}

#cnx_module_header h1{
  margin: 0 0 .4em;
  font-weight: normal;
  font-size: 1.75em;
  border-bottom: 1px solid #8cacbb;
}

#cnx_abstract{
  margin-bottom: 1em;
  font-size: 1.1em;
  font-weight: bold;
  line-height: 1.5em;
}

#cnx_authorship, #cnx_parent{
  margin-bottom: 1em;
  text-align: right;
  color: #76797c;
}

#cnx_authorship .cnx_before, #cnx_parent .cnx_before{
  font-weight: normal;
}

#cnx_authorship a, #cnx_parent a{
  color: #76797c;
}

#cnx_parent{
  margin-top: -.5em;
}

.cnx_optional_role{
  margin-top: .5em;
  display: block;
}

#cnx_rate{
  margin-bottom: .5em;
  font-size: 1.1em;
}

.ratingstars img{
  vertical-align: -2px;
}

.ratingstars .lensinfo, #cnx_bottom_stars  .lensinfo{
  width: auto;
}

.ratings .cannotrate{
  cursor: default;
}

.ratings .lensinfo{
  font-size: .9em;
}

.rating_quantity{
  padding-left: .3em;
  color: #666;
}

.cnx_clear{
  clear: both;
}

/* ========== page layout ========== */

#cnx_sidebar_column{
  padding: 23px 0 30px 30px;
  width: 200px;
  position: absolute;
  left: 0;
}

* html #cnx_sidebar_column{
  width: 230px;
}

#cnx_content_column{
  padding: 19px 30px 30px;
  vertical-align: top;
  margin-left: 230px;
}

#cnx_about_history #cnx_content_column{
  margin-left: 0;
}

#cnx_main{
  padding-bottom: 2em;
  font-size: 1.1em;
}

/* ========== content actions section at bottom ========== */

#cnx_actions_bottom{
  clear: both;
  padding-top: 2em;
}

.cnx_actions_category{
  padding: 0 0 .2em 20px;
  background-repeat: no-repeat;
  background-position: 0 0;
}

#cnx_actions_category_feedback{ background-image: url(envelope.png) }
#cnx_actions_category_download{ background-image: url(pdf.png) }
#cnx_actions_category_addto{ background-image: url(bookmark.png) }
#cnx_actions_category_reuse_edit{ background-image: url(pencil_reuse_edit.png); }

#cnx_actions_bottom h3, #cnx_actions_bottom h4{
  margin: 1em 0 .25em;
  color: #555;
}

#cnx_actions_bottom h4{
  display: inline;
  margin: 0 .15em 0 0;
}

#cnx_actions_bottom .lensinfo h4{
  display: block;
  color: black;
  margin: 0;
}

.cnx_actions_group{
  margin-bottom: .3em;
}

.cnx_actions_group .lensinfo{
  font-size: 1em;
}

/* ========== prev & next links at bottom ========== */

#cnx_prev_next_bottom{
  padding: 1em 0;
  margin: 0;
  text-align: center;
  list-style-image: none;
  list-style-type: none;
}

* html #cnx_prev_next_bottom{
  width: 100%;
}

#cnx_prev_next_bottom li{
  vertical-align: top;
  width: 31%;
  float: left;
  margin: 1em 0;
  padding: 0;
}

#cnx_prev_next_bottom .cnx_before{
  display: block;
  font-weight: normal;
}

#cnx_prev_next_bottom .cnx_previous{
  text-align: left;
  margin-right: 3%;
}

#cnx_prev_next_bottom .cnx_next{
  text-align: right;
  margin-left: 3%;
}

/* ========== footer ========== */

#cnx_footer{
  margin: 5em 0 0;
  padding-bottom: 1em;
  color: #555;
  clear: both;
}

* html #cnx_metadata_links{
  margin-top: -1em;
}

#cnx_more_about{
  font-size: 1.1em;
  font-weight: bold;
}

#cnx_attribution li{
  margin-bottom: 0;
}

#cnx_attribution a{
  text-decoration: underline;
}

#cnx_partner_logos{              
  float: right;
  margin: 0 0 .5em 2em;
}

#cnx_license{
  margin-top: 1em;
}

#cnx_updated{
  margin: 1em 0;
}

/* ========== warnings ========== */

.cnx_warning, .cnx_success_message{
  background-color: #ffce7b;
  border: 1px solid #ffa500;
  font-weight: bold;
  margin: 1em 0em;
  padding: 0.5em 1em 0.5em 26px;
  background-image: url("info.gif");
  background-repeat: no-repeat;
  background-position: 5px 1em;
}

.cnx_warning a{
  color: black;
}

.cnx_success_message{
  clear: both;
  margin: 2em 0 1.5em;
  margin-top: 0\9; /* For IE */
  padding-top: 1em;
  padding-top: .5em\9; /* For IE */
  padding-bottom: 1em;
}

#cnx_no_menclose_support_example{
  float: right;
  margin: 0 0 .5em 1.5em;
}               

#cnx_no_menclose_support_example .cnx_before{
  display: block;
}

#ff_mathml_msg2 td{
  font-weight: normal;
}
#ff_mathml_msg2 td a{
  font-weight: bold;
  text-decoration: underline;
}

/* ========== table ========== */

td, th{
  padding: .3em;
  border-collapse: collapse;
}

* html table{
  font-size: 1em;
}

/* ========== metadata page ========== */

#cnx_about_history td{
  padding: .25em .5em 0 0;
  font-size: 1em;
}

#cnx_about_history .cnx_name{
  font-weight: bold;
}

#cnx_about_history hr{
  border: 0;
  margin: .8em 0;
  height: 1px;
  color: #ccc;
  background-color: #ccc;
}

* html #cnx_about_history hr{
  margin: 0;
}

#cnx_cite_section h3{
  margin-bottom: .5em;
}

#cnx_cite_section p.cnx_cite{
  margin-left: 3em;
}

#cnx_cite_section i{
  font-style: italic;
  font-weight: normal;
}

#cnx_about_history h2{
  font-size: 150%;
  display: block;
  font-family: "Lucida Grande", Verdana, Lucida, Helvetica, Arial, sans-serif;
  font-weight: normal;
  border-bottom: 1px solid #8cacbb;
  padding-top: .5em;
  margin: 1em 0;
}
/* ... */

